--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,5 @@
-aiohttp==3.8.3
-aiosignal==1.3.1
-anyio==3.6.2
-apturl==0.5.2
-async-timeout==4.0.2
-attrs==22.2.0
-autopep8==2.0.1
-bcrypt==3.1.7
-blinker==1.4
-breezy==3.0.2
-Brlapi==0.7.0
-cachetools==4.0.0
-certifi==2019.11.28
-chardet==3.0.4
-charset-normalizer==2.1.1
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-Deprecated==1.2.7
-discord==2.1.0
 discord.py==2.1.0
-distro==1.4.0
-distro-info===0.23ubuntu1
-dulwich==0.19.15
-entrypoints==0.3
-fasteners==0.14.1
-fastimport==0.9.8
-frozenlist==1.3.3
-google-api-python-client==1.7.11
-google-auth==1.5.1
-google-auth-httplib2==0.0.3
-gpg===1.13.1-unknown
-h11==0.14.0
-httpcore==0.16.3
-httplib2==0.14.0
-httpx==0.23.1
-idna==2.8
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-monotonic==1.5
-multidict==6.0.4
-netifaces==0.10.4
-notion-client==2.0.0
-oauth2client==4.1.2
-oauthlib==3.1.0
-olefile==0.46
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-protobuf==3.12.4
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycairo==1.16.2
-pycodestyle==2.10.0
-pycups==1.9.73
-PyDrive==1.3.1
-PyGithub==1.43.7
-Pygments==2.3.1
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-PyQt5==5.14.1
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.8
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
+notion_client==2.0.0
 python-dotenv==0.21.0
-python-gitlab==2.0.1
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-rfc3986==1.5.0
-rsa==4.0
-rubber==1.5.1
-SecretStorage==2.3.1
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-sniffio==1.3.0
-SQLAlchemy==1.3.12
-system-service==0.3
-systemd-python==234
-tomli==2.0.1
-ubuntu-advantage-tools==27.12
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-uritemplate==0.6
-urllib3==1.25.8
-usb-creator==0.3.7
-wadllib==1.3.3
-wrapt==1.11.2
-xkit==0.0.0
-yarl==1.8.2
-youtube-dl==2021.12.17
+youtube_dl==2021.12.17
+#python3 -m  pipreqs.pipreqs .
