--- a/requirements.txt
+++ b/requirements.txt
@@ -2,38 +2,49 @@ aiohttp==3.8.3
 aiosignal==1.3.1
 aiosqlite==0.18.0
 anyio==3.6.2
+apturl==0.5.2
 astroid==2.5.8
 async-timeout==4.0.2
 attrs==19.3.0
 Automat==0.8.0
+bcrypt==3.2.0
 blinker==1.4
+Brlapi==0.8.3
+Brotli==1.0.9
 certifi==2019.11.28
 cffi==1.15.1
 chardet==3.0.4
 charset-normalizer==2.1.1
 Click==7.0
-cloud-init==22.4.2
 colorama==0.4.3
 command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==39.0.1
-dbus-python==1.2.16
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
 discord.py==2.1.0
 distro==1.4.0
-distro-info===0.23ubuntu1
+distro-info===1.1build1
+duplicity==0.8.21
 entrypoints==0.3
+fasteners==0.14.1
 ffmpeg==1.4
 frozenlist==1.3.3
+future==0.18.2
+greenlet==1.1.2
+gyp==0.1
 h11==0.14.0
 httpcore==0.16.3
 httplib2==0.14.0
 httpx==0.23.2
 hyperlink==19.0.0
-idna==3.3
+idna==2.8
 importlib-metadata==1.5.0
-incremental==16.10.1
+incremental==22.10.0
 isort==5.8.0
+jeepney==0.7.1
 Jinja2==2.11.3
 jsonpatch==1.22
 jsonpointer==2.0
@@ -44,32 +55,55 @@ launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
 lazy-object-proxy==1.6.0
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.1.3
 MarkupSafe==1.1.0
 mccabe==0.6.1
+monotonic==1.6
 more-itertools==4.2.0
+msgpack==1.0.3
 multidict==6.0.2
+mutagen==1.46.0
 netifaces==0.10.4
 notion-client==2.0.0
 oauthlib==3.1.0
+olefile==0.46
+paramiko==2.9.3
+pbr==5.11.1
 pexpect==4.6.0
+Pillow==9.0.1
+protobuf==3.12.4
+ptyprocess==0.7.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
+pycairo==1.20.1
 pycparser==2.20
-PyGObject==3.36.0
+pycryptodomex==3.17
+pycups==2.0.1
+PyGObject==3.42.1
 PyHamcrest==1.9.0
 PyJWT==1.7.1
 pylint==2.7.2
 pymacaroons==0.13.0
 pymongo==3.12.1
 PyNaCl==1.5.0
-pyOpenSSL==19.0.0
+pynvim==0.4.2
+pyOpenSSL==23.0.0
+pyparsing==2.4.7
+pyRFC3339==1.1
 pyrsistent==0.15.5
 pyserial==3.4
 pyspnego==0.1.5
-python-apt==2.0.1
-python-debian===0.1.36ubuntu1
+python-apt==2.4.0+ubuntu1
+python-dateutil==2.8.1
+python-debian===0.1.43ubuntu1
 python-dotenv==0.21.0
+pytz==2022.1
+pyxdg==0.27
 PyYAML==5.4
+reportlab==3.6.8
 requests==2.22.0
 requests-unixsocket==0.2.0
 rfc3986==1.5.0
@@ -79,21 +113,25 @@ simplejson==3.16.0
 six==1.15.0
 smbprotocol==1.5.0
 sniffio==1.3.0
-sos==4.4
 ssh-import-id==5.10
 systemd-python==234
+testresources==2.0.1
 toml==0.10.2
 Twisted==22.10.0
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 ubuntu-advantage-tools==8001
-ufw==0.36
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
 unattended-upgrades==0.1
 urllib3==1.25.8
+usb-creator==0.3.7
 wadllib==1.3.3
+websockets==10.4
 wrapt==1.12.1
+xdg==5
+xkit==0.0.0
 yarl==1.7.2
 youtube-dl==2021.12.17
+yt-dlp==2023.3.4
 zipp==1.0.0
-zope.interface==4.7.1
-notion_client==2.0.0
-youtube_dl==2021.12.17
+zope.interface==6.0
