--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiosqlite==0.19.0
 discord.py==2.2.2
 jokeapi==1.0.5
-openai==0.27.3
+py_librus_api==0.3.1
 python-dotenv==1.0.0
-requests==2.31.0
+Requests==2.31.0
 yt_dlp==2023.7.6
